--- a/client/src/app/Patients/Patients.component.html
+++ b/client/src/app/Patients/Patients.component.html
@@ -2,7 +2,6 @@
   <div class="card">
     <div class="card-header">
       
-      
 
     </div>
     <div class="card-body">
@@ -35,6 +34,7 @@
         <div class="card-footer"></div>
       </div>
       <div class="card" *ngIf="!showList()">
+        <form #testForm="ngForm">
         <div class="row">
           <div class="col-sm-6">
             <div class="card-header">
@@ -57,6 +57,38 @@
               <div class="col-sm-6"><label>age</label></div>
               <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.age" name="4"></div>
             </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>gender</label></div>
+              <div class="col-sm-6"> 
+                <select [(ngModel)]="selectedPatient.gender" name="name" class="form-control">
+                  <option *ngFor="let an of genderOptions" [value]=an.value>{{ an.description }}
+                  </option>
+              </select></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>FEV1</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.feV1" name="34"></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>TLC</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.tlc" name="39"></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>RV</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.rv" name="35"></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>ERV</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.erv" name="36"></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>IC</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.ic" name="37"></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-sm-6"><label>VC</label></div>
+              <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.vc" name="38"></div>
+            </div>
           </div>
           <div class="card-footer">
             <div class="row">
@@ -70,10 +102,35 @@
 
           </div>
           <div class="col-sm-6">
-            <img src="../../assets/images/about.jpg" height="400px" weight="400px">
+           
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="header">CAS prediction</div>
+                  <div class="card-body">
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>Measured</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedCas.measured" name="134"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="header">GLI prediction</div>
+                  <div class="card-body">
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>Measured</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedGli.measured" name="234"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+         
+            </div>
           </div>
         </div>
-        
+      </form>
       </div>
     </div>
     <div class="card-footer">
