--- a/client/src/app/Patients/Patients.component.html
+++ b/client/src/app/Patients/Patients.component.html
@@ -102,15 +102,38 @@
 
           </div>
           <div class="col-sm-6">
-           
-            <div class="row">
+            <div class="row mt-5">
               <div class="col-sm-6">
                 <div class="card">
                   <div class="header">CAS prediction</div>
                   <div class="card-body">
                     <div class="row mb-2">
                       <div class="col-sm-6"><label>Measured</label></div>
-                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedCas.measured" name="134"></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.measured" name="135"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>Predicted</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.predicted" name="136"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>ZScore</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.zscore" name="137"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>LLN</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.lln" name="138"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>ULN</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.uln" name="139"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>% predicted</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.perc_Predicted" name="140"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>BDR_perc_changed</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.cas.bdR_perc_changed" name="141"></div>
                     </div>
                   </div>
                 </div>
@@ -121,13 +144,38 @@
                   <div class="card-body">
                     <div class="row mb-2">
                       <div class="col-sm-6"><label>Measured</label></div>
-                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedGli.measured" name="234"></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.measured" name="234"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>Predicted</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.predicted" name="236"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>ZScore</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.zscore" name="237"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>LLN</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.lln" name="238"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>ULN</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.uln" name="239"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>% predicted</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.perc_Predicted" name="240"></div>
+                    </div>
+                    <div class="row mb-2">
+                      <div class="col-sm-6"><label>BDR_perc_changed</label></div>
+                      <div class="col-sm-6"><input type=text class=form-control [(ngModel)]="selectedPatient.gli.bdR_perc_changed" name="241"></div>
                     </div>
                   </div>
                 </div>
               </div>
          
             </div>
+           
           </div>
         </div>
       </form>
