--- a/client/src/app/Statistics/Statistics.component.html
+++ b/client/src/app/Statistics/Statistics.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-center">
         <h2><span class="lbl lbl-secondary">Statistics</span></h2>
       </div>
-      
+      <app-statisticsOne></app-statisticsOne>
     </div>
     <div class="card-body"></div>
     <div class="card-footer">
