charts are working

--- a/client/src/app/Statistics/Statistics.component.html
+++ b/client/src/app/Statistics/Statistics.component.html
@@ -21,7 +21,7 @@
               </div>
               <div class="col-sm-6" *ngIf="selectTwo()" id="chart-wrapper"> <app-statisticsTwo></app-statisticsTwo>
               </div>
-              <div class="col-sm-6" *ngIf="selectThree()" id="chart-wrapper"> <app-dummy></app-dummy> </div>
+              <div class="col-sm-6" *ngIf="selectThree()" id="chart-wrapper"> <app-statistics-three></app-statistics-three> </div>
               <div class="col-sm-6" *ngIf="selectFour()" id="chart-wrapper"> <app-dummy></app-dummy> </div>
               <div class="col-sm-6" *ngIf="selectFive()" id="chart-wrapper"> <app-dummy></app-dummy> </div>
               <div class="col-sm-6" *ngIf="selectSix()" id="chart-wrapper"> <app-dummy></app-dummy> </div>
