--- a/client/src/app/Statistics/statisticsTwo/statisticsTwo.component.html
+++ b/client/src/app/Statistics/statisticsTwo/statisticsTwo.component.html
@@ -1,12 +1,3 @@
 <div  style="width: 60%;">
-  <canvas
-    baseChart
-    [chartType]="'bar'"
-    [legend]="true"
-    [datasets]="chartData"
-    [labels]="chartLabels"
-    [options]="chartOptions"
-  >
- 
-  </canvas>
+  <canvas id="stat02"></canvas>
 </div>
