--- a/client/src/app/Statistics/statisticsOne/statisticsOne.component.html
+++ b/client/src/app/Statistics/statisticsOne/statisticsOne.component.html
@@ -1,12 +1,3 @@
 <div style="width: 60%;">
-  <canvas
-    baseChart
-    [chartType]="'line'"
-    [legend]="true"
-    [datasets]="chartData"
-    [labels]="chartLabels"
-    [options]="chartOptions"
-  >
- 
-  </canvas>
+  <canvas id="stat01"></canvas>
 </div>
